...
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:id="@+id/accountBalanceActivity"
            >
            <include layout="@layout/app_bar" android:id="@+id/appBar" />

            <ListView
                android:id="@+id/accountsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
...
