<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    android:id="@+id/loginActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/budgieBlue"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        />
    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginBottom="20dp"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/loginPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        />

    <TextView
        android:id="@+id/loginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <Button
        android:id="@+id/pinLoginBtn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/pinLogin"
        android:layout_marginTop="15dp"
        android:background="@color/budgiePurple"
        android:textColor="@color/budgieYellow"
        android:onClick="pinLoginBtn"
        />

    <Button
        android:id="@+id/biometricLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biometricLogin"
        android:layout_marginTop="20dp"
        android:background="@color/budgiePurple"
        android:textColor="@color/budgieYellow"
        android:onClick="biometricLoginBtn"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/registerBtn"
        android:layout_marginTop="20dp"
        android:background="@color/budgiePurple"
        android:textColor="@color/budgieYellow"
        android:onClick="registerBtn"
        />
</LinearLayout>